--- a/assets/styles/about_area.css
+++ b/assets/styles/about_area.css
@@ -130,11 +130,14 @@ section.about__area{
     }
     .avatars{
         display: flex;
-        
+        justify-content: center;
+        align-items: center;
         ul{
             display: flex;
             position: relative;
             padding: 1rem;
+            justify-content: center;
+            align-items: center;
             gap: 20px;
             flex-wrap: wrap;
             list-style-type: none;
@@ -181,4 +184,92 @@ section.about__area{
 
         }
     }
+    .about01{
+        margin: 80px 0 0;
+        width: 70vw;
+        display: flex;
+        justify-content: center;
+        gap: 30px 30px;
+        .about01-content{
+            display: flex;
+            flex-direction: column;
+            h4{
+                color: white;
+                font-weight: bolder;
+                margin: 0 0 2px;
+                text-transform: uppercase;
+                font-size: 30px
+            }
+            span.rate{
+                color: #faa706;
+                text-transform: uppercase;
+                font-weight: bold;
+                font-size: 20px;
+                margin: 0 0 18px;
+            }
+            span.rate+p{
+                width: 100%;
+                color: #adb0bc;
+                
+            }
+            & .row:first-child{
+                display: flex;
+                flex: auto;
+                gap: 20px;
+                margin: 0 0 30px;
+                ul{
+                    width: max-content;
+                    display: flex;
+                    flex-direction: column;
+                    list-style-type: none;
+                    color: #adb0bc;
+                    gap: 10px;
+                    font-weight: 500;
+                    li{
+                        display: flex;
+                        align-items: center;
+                        gap: 20px;
+                        width: 100%;
+                        justify-content: start;
+                        background-image: -webkit-linear-gradient(0deg, #1f2935 0%, transparent 100%, #10181f 100%);
+                        background-image: -ms-linear-gradient(0deg, #1f2935 0%, transparent 100%, #10181f 100%);
+                        box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.21);
+                        padding: 7px 13px;
+                        border-radius: 7px;
+                        translate: 0px;
+                        transition: 500ms all;
+                        &:hover{
+                            translate: -10px;
+                        }
+                    }
+                }
+            }
+            & .row:last-child{
+                display: flex;
+                flex: auto;
+                gap: 20px;
+                flex-wrap: wrap;
+                button{
+                    flex: auto;
+                    background-color: #1f2935;
+                    background-image: -webkit-linear-gradient(90deg, #10181f 0%, transparent 0%, #141a20 100%);
+                    border: 0;
+                    color: #adb0bc;
+                    font-weight: bolder;
+                    text-transform: uppercase;
+                    letter-spacing: 1px;
+                    transition: 250ms all;
+                    font-size: 16px;
+                    font-weight: 500;
+                    padding: 25px 30px;
+                    &:hover{
+                        color: rgb(69,248,130);
+                    }
+                }
+            }
+        }
+    }
+}
+@media (min-width: 1280px) {
+    
 }
