--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -11,7 +11,7 @@
 }
 header{
     position: absolute;
-    overflow-x: hidden !important;
+    overflow-anchor: none;
     top: 0%;
     left: 0%;
     z-index: 102;
