--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -4,6 +4,7 @@
 @import "loading.css";
 @import "nft-item.css";
 @import "about_area.css";
+@import "users.css";
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body{
     position: relative;
@@ -37,7 +38,7 @@ html{
     position: absolute;
     z-index: 1;
     transform: translate3d(0,0,0);
-    transition: 100ms transform;
+    transition: 100ms all;
     top: -0.5%;
     left: -0.5%;
     pointer-events: none;
@@ -45,6 +46,21 @@ html{
     display: none;
     border-radius: 50%;
     background:rgb(69,248,130);
+}
+.cursor-pointer{
+  height: auto;
+  width: 80px;
+  top: -1%;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  padding: 20px 10px;
+  align-items: center;
+  border-radius: 50%;
+  display: flex;
+  background:rgb(69,248,130);
+  left: -2%;
 }
 ::-moz-selection { /* Code for Firefox */
   color: black;
