--- a/assets/styles/carucel.css
+++ b/assets/styles/carucel.css
@@ -8,13 +8,12 @@
     overflow: hidden;
 }
 .swiper {
-      width: 150vw;
+      width: 100vw;
       flex-shrink: 0;
       height: 40vw;
       display: flex;
       gap: 20px;
     }
-
     .swiper-slide {
       text-align: center;
       display: flex;
@@ -37,11 +36,11 @@
         justify-content: space-between;
         h3{
             color: white;
-            font-size: 26px;
+            font-size: clamp(10px,2.5vw,26px);
         }
         p{
             color: #4d5661;
-            font-size: 16px;
+            font-size: clamp(8px,2vw,18px);
         }
         
       }
