--- a/assets/styles/about_area.css
+++ b/assets/styles/about_area.css
@@ -9,6 +9,7 @@ section.about__area{
     flex-direction: column;
     width: 100%;
     justify-content: center;
+    text-align: center;
     align-items: center;
     padding-top: 130px;
     padding-bottom: 130px;
@@ -36,7 +37,7 @@ section.about__area{
     }
     div.btns{
         display:flex;
-        gap: 40px;
+        gap: clamp(20px,4vw,40px);
         a{
             display: inline-flex;
             align-items: center;
@@ -46,7 +47,7 @@ section.about__area{
             text-transform: uppercase;
             white-space: nowrap;
             font-size: 20px;
-            padding: 14px 35px;
+            padding: 14px clamp(20px,5vw,35px);
             line-height: 1;
             position: relative;
             overflow: hidden;
