--- a/assets/styles/carucel.css
+++ b/assets/styles/carucel.css
@@ -8,9 +8,9 @@
     overflow: hidden;
 }
 .swiper {
-      width: 100vw;
+      width: 90vw;
       flex-shrink: 0;
-      height: 40vw;
+      height: clamp(350px,70vh,600px);
       display: flex;
       gap: 20px;
     }
@@ -18,6 +18,7 @@
       text-align: center;
       display: flex;
       align-items: center;
+      transform: translate3d(0,0,0) !important;
       flex-direction: column;
     justify-content: center;
       img{
@@ -45,18 +46,22 @@
         
       }
     }
-    .swiper-slide:not(.swiper-slide-active){
-        scale: 0.9;
-        transition: 500ms all;
-        transform: translate3d(0,0,0) !important;
-        .between{
-            opacity: 0;
-            visibility: hidden;
 
-        }
-        
-        
-    }
     .swiper-slide-shadow-coverflow{
         background-image: none !important;
     }
+
+@media (min-width: 768px) {
+  .swiper{
+    width: 150vw;
+  }
+  .swiper-slide:not(.swiper-slide-active){
+    scale: 0.9;
+    transition: 500ms all;
+    .between{
+        opacity: 0;
+        visibility: hidden;
+
+    }   
+}
+}
