--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3,6 +3,7 @@
 @import "home.css";
 @import "loading.css";
 @import "video__area.css";
+@import "seasons.css";
 @import "nft-item.css";
 @import "about_area.css";
 @import "users.css";
