--- a/assets/styles/users.css
+++ b/assets/styles/users.css
@@ -17,7 +17,7 @@ section.users{
             letter-spacing: 2px;
         }
         h3{
-            font-size: 45px;
+            font-size: clamp(40px,12vw,45px);
             letter-spacing: 1px;
             font-weight: 900;
             &::after{
