--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -5,12 +5,12 @@
 @import "video__area.css";
 @import "seasons.css";
 @import "nft-item.css";
+@import "trend.css";
 @import "about_area.css";
 @import "users.css";
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body{
     position: relative;
-    overflow-x:hidden;
     display: flex;
     flex-direction: column;
     font-family: 'Poppins';
@@ -35,19 +35,18 @@ html{
   scrollbar-track-color: black;
 }
 .cursor{
-    height: 10px;
-    width: 10px;
-    position: absolute;
-    z-index: 1;
-    transform: translate3d(0,0,0);
-    transition: 100ms all;
-    top: -0.1%;
-    left: -0.3%;
-    pointer-events: none;
-    transform: translate(-50%, -50%);
-    display: none;
-    border-radius: 50%;
-    background:rgb(69,248,130);
+  position: fixed;
+  width: 10px;
+  transition: 100ms all;
+  top: -0.1%;
+  left: -0.2%;
+  height: 10px;
+  border-radius: 50%;
+  z-index: 100;
+  background: rgb(69,248,130);
+  }
+.scalehidden{
+  scale: 0;
 }
 .cursor-pointer{
   height: auto;
@@ -96,4 +95,18 @@ html{
 .upper-show{
   opacity: 1;
   visibility: visible;
+}
+.between{
+  display: flex;
+  justify-content: space-between;
+}
+body .blackbox{
+  display: block;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100vw;
+  z-index: 200;
+  background-color: white;
+  height: 100vh;
 }
