--- a/assets/styles/reset.css
+++ b/assets/styles/reset.css
@@ -9,7 +9,14 @@ a{
     text-decoration: none;
 }
 body{
-    height: 100%;
     width: 100%;
-    overflow-x: hidden;
+    min-height:100%;
+    overflow:scroll;
+}
+html{
+    min-height:100%;
+    overflow: scroll;
+}
+main{
+    overflow: scroll;
 }
