--- a/assets/styles/trend.css
+++ b/assets/styles/trend.css
@@ -1,20 +1,66 @@
 section.trending{
     background:#10181F;
-    h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .title{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        h2{
         font-size: 38px;
         color: white;
         font-weight: bolder;
         display: flex;
         text-transform: uppercase;
         align-items: center;
+        text-align: start;
+        justify-content: start;
+        margin-left: 5%;
         gap: 20px;
-        justify-content: center;
         img{
             height: 38px;
         }
+        }
+        .prevnext{
+            margin-right: 5%;
+            button{
+                height: 40px;
+                width: 40px;
+                margin: 5px;
+                background-color: transparent;
+                border-radius: 50%;
+                border: 2px solid whitesmoke;
+                i{
+                    color: white;
+                }
+            }
+        }
+/*         .prevnext{
+            gap: 10px;
+            display: flex;
+            margin-right: 5%;
+            buttton{
+                background-color: transparent !important;
+                i{
+                    color: white;
+                    
+                    font-size: 2rem;
+                }
+            }
+        } */
+    }
+    .container{
+        margin: 5vw 0; 
+        display: flex;
+        flex-direction: column;
+        gap: 20px 0;
+        justify-content: start;
+        align-items: start;
+        width: 70vw;
     }
     .Swipper{
-        width: 60%;
+        width: 90%;
         height: 100%;
         .swiper-wrapper .swiper-slide{
             text-align: center;
@@ -22,37 +68,83 @@ section.trending{
             background: url('https://themedox.com/demo/mykd/assets/img/bg/trendnft_img.png') no-repeat center center;
             display: flex;
             justify-content: center;
-            align-items: center;
+            gap: 5px;
+            flex-direction: column;
+            align-items: start;
             background-size: contain;
             background-position: center;
             max-width: 403px;
             height: 426px;
             padding: 24px 20px;
+            img{
+                border-radius: 8px;
+                width: 100%;
+                max-height: 249px;
+                object-fit: cover;
+            }
             .between{
                 align-items: center;
                 width: 100%;
+                i.fa-heart{
+                    color: white;
+                }
                 .swipper-user{
                     display: flex;
-                    gap: 20px;
+                    gap: 10px;
                     img{
                         height: 45px;
                         width: 45px;
                     }
                     .info{
-
+                        text-align: start;
                         h6{
                             font-size: 16px;
-                            margin: 0 0 6px;
                             color: white;
                         }
                         a{
                             line-height: 1;
                             color: grey;
+                            text-decoration: underline;
                             font-size: 12px;
                         }
                     }
                 }
+                &:last-child{
+                    width: 90%;
+                    .price{
+                        display: flex;
+                        justify-content: start;
+                        align-items: start;
+                        flex-direction: column;
+                        span.bid{
+                            font-size: 13px;
+                            color: grey;
+                        }
+                        h6{
+                            font-size: 18px;
+                            color: white;
+                            text-transform: uppercase;
+                            i{
+                                color: orange;
+                                margin-right: 10px;
+                            }
+                            
+                        }
+                    }
+                }
+
+                
+            }
+            span.hr{
+                display: block;
+                width: 100%;
+                height: 1px;
+                background: linear-gradient(90deg, transparent 0%, #383d44 50%, transparent 100%);
             }
         }
     }
+}
+
+.orange{
+    color: orange;
 }
