--- a/assets/styles/nft-item.css
+++ b/assets/styles/nft-item.css
@@ -13,6 +13,8 @@ section.nft-item__area{
         color: white;
         align-items: center;
         justify-content: center;
+        z-index: 1;
+        position: relative;
         flex-direction: column;
         gap: 10px;
         border-radius: 15px;
