--- a/assets/styles/trend.css
+++ b/assets/styles/trend.css
@@ -1,14 +1,17 @@
 section.trending{
+    z-index: 2;
     background:#10181F;
     display: flex;
     justify-content: center;
     align-items: center;
     .title{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         width: 100%;
         display: flex;
-        justify-content: space-between;
         h2{
-        font-size: 38px;
+        font-size:clamp(20px,7vw,38px);
         color: white;
         font-weight: bolder;
         display: flex;
@@ -23,6 +26,7 @@ section.trending{
         }
         }
         .prevnext{
+            display: flex;
             margin-right: 5%;
             button{
                 height: 40px;
@@ -36,19 +40,6 @@ section.trending{
                 }
             }
         }
-/*         .prevnext{
-            gap: 10px;
-            display: flex;
-            margin-right: 5%;
-            buttton{
-                background-color: transparent !important;
-                i{
-                    color: white;
-                    
-                    font-size: 2rem;
-                }
-            }
-        } */
     }
     .container{
         margin: 5vw 0; 
@@ -66,16 +57,15 @@ section.trending{
             text-align: center;
             font-size: 18px;
             background: url('https://themedox.com/demo/mykd/assets/img/bg/trendnft_img.png') no-repeat center center;
+            background-size: cover;
             display: flex;
             justify-content: center;
             gap: 5px;
             flex-direction: column;
             align-items: start;
-            background-size: contain;
             background-position: center;
-            max-width: 403px;
             height: 426px;
-            padding: 24px 20px;
+            padding: 20px 20px;
             img{
                 border-radius: 8px;
                 width: 100%;
@@ -147,4 +137,10 @@ section.trending{
 
 .orange{
     color: orange;
+}
+@media (min-width: 768px) {
+    section.trending .title{
+        justify-content: space-between;
+        flex-direction: row;
+    }
 }
