--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -39,8 +39,8 @@ html{
   position: fixed;
   width: 10px;
   transition: 100ms all;
-  top: -0.1%;
-  left: -0.2%;
+  top: -5px;
+  left: -5px;
   visibility: visible;
   pointer-events: none;
   height: 10px;
