--- a/assets/styles/trend.css
+++ b/assets/styles/trend.css
@@ -61,6 +61,7 @@ section.trending{
             display: flex;
             justify-content: center;
             gap: 5px;
+            border-radius: 8px;
             flex-direction: column;
             align-items: start;
             background-position: center;
