--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -5,23 +5,23 @@ footer{
     flex-direction: column;
     p{
         color: grey;
-        max-width: 45%;
         font-size: 15px;
+        
     }
     .bigfooter{
         padding: 80px 20px 30px;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
-        align-self: center;
-        gap: 20px;
+        flex-direction: column;
         h6{
             color: white;
             font-size: 20px;
+            text-transform: uppercase;
         }
         width: 100%;
         background: #0F161B;
         .logoabout{
+            flex-basis: 30%;
             display: flex;
             flex-direction: column;
             gap: 20px;
@@ -43,26 +43,82 @@ footer{
                 
             }
             
+            
         }
         .quiclink,.Supports{
-            flex: 1 0 auto;
+            flex-basis: 20%;
+            margin: 20px 0;
             ul{
                 list-style-type: none;
                 li{
                     color: grey;
+                    overflow: hidden;
+                    margin: 20px 0;
+                    transition: 400ms all;
+                    width: fit-content;
+                    position: relative;
+                    &::after{
+                        content: "";
+                        background-color: rgb(69,248,130);
+                        width: 100%; 
+                        position: absolute;
+                        height: 1px;
+                        bottom: 0;
+                        left: -100%;
+                        transition: 500ms all;
+                    }
+                    &:hover{
+                        color: rgb(69,248,130);
+                        &::after{
+                            left: 0%;
+                        }
+
+                    }
                 }
             }
 
         }
         .newsletter{
+            flex-basis: 20%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
             input{
                 background-color: #1F2935;
                 padding: 20px;
                 border: 0;
                 border-radius: 8px;
+                color: white;
                 outline: none;
+                width: 80%;
                 &::placeholder{
                     color: rgb(175, 175, 175);
+                }
+
+            }
+            .input{
+                position: relative;
+                width: 100%;
+                button{
+                    position: absolute;
+                    top: 50%;
+                    transform: translate(-50%,-50%);
+                    border: 0;
+                    border-radius: 8px;
+                    width: 50px;
+                    height: 100%;
+                    background-color: rgb(69,248,130);
+                    transition: 500ms all;
+                    &:hover{
+                        background-color: orange;
+                    }
+                    img{
+                        height: 50%;
+                        width: 50%;
+                    }
+
                 }
             }
         }
@@ -70,8 +126,39 @@ footer{
     .subfooter{
         background-color: #000000;
         width: 100%;
+        color: grey;
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        text-align: center;
+        justify-content: space-around;
+        align-items: center;
     }
 }
 span.green{
     color: rgb(69,248,130);
+}
+@media (min-width: 768px) {
+    footer{
+        p{
+            max-width: 45%;
+        }
+        .bigfooter{
+            flex-direction: row;
+            justify-content: center;
+            align-items: start;
+            .logoabout{
+                flex-basis: 300px;
+            }
+            .quiclink,.Supports,.newsletter{
+                flex-basis: 300px;
+                margin:0;
+            }
+            .newsletter{
+                justify-content: start;
+                align-items: start;
+            }
+        }
+    }
 }
