--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -77,8 +77,8 @@ html{
 }
 .upper{
   display: inline-block;
-  width: 50px;
-  height: 50px;
+  width: 25px;
+  height: 25px;
   opacity: 0;
   visibility: hidden;
   background-color: rgb(69,248,130);
@@ -90,7 +90,7 @@ html{
   padding: 5px;
   z-index: 500;
   transition: 500ms all;
-  right: 40px;
+  right: 20px;
   &:hover{
     background: orange;
   }
@@ -112,4 +112,10 @@ body .blackbox{
   z-index: 200;
   background-color: white;
   height: 100vh;
+}
+@media (min-width: 768px) {
+  .upper{
+    width: 50px;
+    height: 50px;
+  }
 }
