--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -119,3 +119,30 @@ body .blackbox{
     height: 50px;
   }
 }
+.popup{
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #00000085;
+  color: white;
+  .container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: end;
+    i{
+      transition: 250ms all;
+      font-size: 2rem;
+      &:hover{
+        color: rgb(69,248,130);
+      }
+    }
+  }
+}
