--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -401,7 +401,6 @@ header nav{
                 padding: 20px 0;
                 top: -25%;
                 overflow: hidden;
-
                 transition: 500ms all;
                 ul{
                     background-color: rgb(24,33,40);
@@ -409,25 +408,35 @@ header nav{
                     border: 1px solid rgba(128, 128, 128, 0.521);
                     li{
                         width: 20rem;
+                        transition: 0.5s all ease;
                         text-transform: uppercase;
+                        &:hover{
+                            &::before{
+                                margin: 7px 9px 0 0;
+                                content: "";
+                                display: inline-block;
+                                border-radius: 0 5px 0 0;
+                                width: 3px;
+                                height: 7px;
+                                background-color: var(--main-color);
+
+                            }
+                        }
                 }}
             }
             &:hover{
                 span.sub-mainmenu{
                     top: 100%;
                     opacity: 1;
-                    visibility: visible;
-                    
+                    visibility: visible; 
                 }
-                
-
                 color: var(--main-color);
                 hr{
                     opacity: 1;
                     transform: rotate(50deg);
                 }
-
             }
+            
             hr{
                 transition: 550ms all;
                 position: absolute;
