--- a/assets/styles/loading.css
+++ b/assets/styles/loading.css
@@ -1,7 +1,10 @@
 .lds-ring{
     background-color: black;
     width: 100vw;
+    top: 0;
+    left: 0;
     position: fixed;
+    z-index: 1000;
     display: block;
     height: 100vh;
     opacity: 1;
