--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -11,7 +11,6 @@
   span.sub-mainmenu ul .current {
     color: var(--main-color);
     a {
-      position: relative;
       hr {
         opacity: 1;
         transform: rotate(50deg);
@@ -409,6 +408,12 @@ header nav {
       cursor: pointer;
       transition: 250ms all;
       position: relative;
+      a{
+        position: relative;
+        hr{
+          opacity: 0;
+        }
+      }
       span.sub-mainmenu {
         opacity: 0;
         visibility: hidden;
@@ -435,6 +440,7 @@ header nav {
               display: inline-block;
               height: 100%;
               hr {
+                opacity: 0;
                 top: -25%;
                 height: 150%;
               }
