--- a/assets/styles/About/home.css
+++ b/assets/styles/About/home.css
@@ -1,3 +1,10 @@
+@keyframes horizontal-shaking {
+  0% { transform: translateX(0) }
+  25% { transform: translateX(5px) }
+  50% { transform: translateX(-5px) }
+  75% { transform: translateX(5px) }
+  100% { transform: translateX(0) }
+ }
 main {
   width: 100vw;
   overflow-x: hidden;
@@ -12,6 +19,9 @@ main {
     background-image: url("https://themedox.com/demo/mykd/assets/img/bg/breadcrumb_bg01.jpg");
     img {
       display: none;
+      &:hover{
+        animation: horizontal-shaking 0.3s 2;
+      }
     }
     &::before {
       left: 0;
@@ -62,8 +72,8 @@ main {
         }
       }
     }
-  }
 
+  }
 }
 @media (min-width: 768px) {
   main section.main-area img{
