--- a/assets/styles/About/nftearing.css
+++ b/assets/styles/About/nftearing.css
@@ -1,8 +1,27 @@
-section.nftearing{
-    background-color: rgb(17,24,30);
-    width: 100%;
+section.nftearing {
+  background-color: rgb(17, 24, 30);
+  width: 100%;
+  display: flex;
+  padding: 100px 0 100px 0;
+  justify-content: center;
+  align-items: start;
+  h2.white {
+    font-size: 55px;
+    letter-spacing: 3.5px;
+    margin: 0 0 50px;
+  }
+  .about__three-images {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    
+    align-items: start;
+    justify-content: start;
+    gap: 25px;
+    img {
+      width: 100%;
+    }
+  }
+}
+@media (min-width: 768px) {
+  section.nftearing {
+    padding: 130px 0 130px 0;
+  }
 }
