--- a/assets/styles/About/nftearing.css
+++ b/assets/styles/About/nftearing.css
@@ -2,26 +2,99 @@ section.nftearing {
   background-color: rgb(17, 24, 30);
   width: 100%;
   display: flex;
+  flex-direction: column;
   padding: 100px 0 100px 0;
   justify-content: center;
-  align-items: start;
+  align-items: center;
+  .nftearing-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 50px;
+    width: 80%;
+    .title {
+      text-align: center;
+      flex-basis: 30%;
+      .circle {
+        display: inline-block;
+        position: relative;
+        img {
+          height: 113px;
+          width: 113px;
+          animation: Cicle 1s linear 0s infinite;
+        }
+      }
+    }
+  }
   h2.white {
     font-size: 55px;
     letter-spacing: 3.5px;
     margin: 0 0 50px;
   }
   .about__three-images {
-    display: flex;
-    align-items: start;
-    justify-content: start;
-    gap: 25px;
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 50%;
+    position: relative;
+    grid-template-areas: "img2" "img1" "paragraf";
+    gap: 0px;
     img {
+      &:first-child {
+        grid-area: img1;
+        height: 60%;
+      }
       width: 100%;
+      &:last-child {
+        grid-area: img2;
+        width: calc(60% - 26px);
+      }
+    }
+    p {
+      width: 100%;
+      color: rgb(170, 170, 170);
+      grid-area: paragraf;
+    }
+    .about__dots {
+      position: absolute;
+      top: 0;
+      right: 0;
+      svg {
+        box-sizing: content-box;
+        padding: 10px;
+        background-color: #11181e;
+      }
+      svg path {
+        fill: rgb(69, 248, 130);
+      }
     }
   }
 }
 @media (min-width: 768px) {
   section.nftearing {
     padding: 130px 0 130px 0;
+    .about__three-images {
+      width: 80%;
+      place-items: start;
+      gap: 25px;
+      grid-template-areas: "img1 img2" "img1 paragraf";
+    }
+  }
+}
+@media (min-width: 1200px) {
+  section.nftearing .about__three-images{
+    width: 50%;
+  }
+}
+@keyframes Cicle {
+  0% {
+    rotate: 0deg;
+  }
+  50% {
+    rotate: 180deg;
+  }
+  100% {
+    rotate: 360deg;
   }
 }
