--- a/assets/styles/Contact/main.css
+++ b/assets/styles/Contact/main.css
@@ -7,7 +7,7 @@ main {
     align-items: center;
     width: 100%;
     height: 100%;
-    background: url("https://themedox.com/demo/mykd/assets/img/bg/breadcrumb_bg02.jpg")
+    background: url("/assets/images/breadcrumb_bg02.jpg")
       no-repeat local center;
     background-size: cover;
     padding: 150px 0 75px;
