Remove Sounds added

--- a/assets/styles/About/style.css
+++ b/assets/styles/About/style.css
@@ -1,3 +1,4 @@
 @import "main.css";
 @import "nftearing.css";
-@import "services.css"
+@import "services.css";
+@import url('../Homeone/users.css');
